--- a/test/fixtures/runs.yml
+++ b/test/fixtures/runs.yml
@@ -1,11 +1,8 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-one:
+first:
   distance: 1
   duration: 2017-06-27 10:57:21
   date: 2017-06-27 10:57:21
+  user: main
 
-two:
-  distance: 1
-  duration: 2017-06-27 10:57:21
-  date: 2017-06-27 10:57:21
